gave a start in the block method.. still the statmetns mthd need to be implemetned.. waiting for the grammar paper...

--- a/ParserMan/Sample.in
+++ b/ParserMan/Sample.in
@@ -1,5 +1,5 @@
 class GoodJob
 {
-static int findMeAJob (int c,boolean lol)
-static int whyDoIHaveAJob()
+static int findMeAJob (int c,boolean lol){}
+static int whyDoIHaveAJob(){}
 }
