--- a/trunk/ParserMan/Sample.in
+++ b/trunk/ParserMan/Sample.in
@@ -1,5 +1,9 @@
 class GoodJob
 {
 static int findMeAJob (int c,boolean lol){}
-static int whyDoIHaveAJob(){}
+static int whyDoIHaveAJob()
+{
+	int x;
+	int y;
+}
 }
