--- a/ParserMan/Sample.in
+++ b/ParserMan/Sample.in
@@ -3,41 +3,26 @@ class GoodJob
 static int findMeAJob (int c,boolean lol){}
 static int whyDoIHaveAJob()
 {
-	int x;
-	int y;
-	while()
+	int a;
+	int b;
+	while(d==3)
 	{
-		x = 3;
-		y = 4;
-		z = 12;
+		e = 3;
+		f = 4;
+		g = 12;
 		
 	}
 	
-	if()
+	if(h!=3)
 	{
-		x = 3;
-		y = 3;
-		int z;
-
+		int i;
+		J = j + j;
+		ff = 2 + 2;
 	}
 	else
 	{
-		x = 12;
-		hashas = 12;
+		k = 3;
 	}
-	
-	if()
-	{
-	  hashas = 1;
-	}
-	else if()
-	{
-	 hashas = 2;
-	}
-	else
-	{
-		hashas = 3;
-	}
-	
+		
 }
 }
